Closed
Bug 34283
Opened 25 years ago
Closed 24 years ago
Website causes double showing of Mozilla
Categories
(Core :: Layout, defect, P3)
Tracking
()
VERIFIED
FIXED
People
(Reporter: bugzilla, Assigned: kmcclusk)
References
()
Details
(Keywords: perf)
Attachments
(1 file)
1003 bytes,
patch
|
Details | Diff | Splinter Review |
If you go to:
http://cgl.microsoft.com/clipgallerylive/cgl30/eula.asp?nInterface=0
you will be able to see the double showing of Mozilla
Comment 1•25 years ago
|
||
page appears fine to me, and your description is pretty vague. marking
worksforme, if you can still see this problem in a recent nightly, please add a
better description of it.
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → WORKSFORME
Comment 2•25 years ago
|
||
Win98SE - Build 40215 - First access of URL, page begins to load and a brief
second instance of the browser will appear in the lower right quadrant of the
screen. Only shows for a split second (flash).
Comment 3•25 years ago
|
||
thank you for a better description, reopening and changing OS flags to what you
say you are on. Hopefully someone who has a win98 box (I don't) will be able to
figure this out for you.
Status: RESOLVED → REOPENED
OS: Windows 2000 → Windows 98
Resolution: WORKSFORME → ---
I can't reproduce this using viewer. The description "second instance of the
browser will appear in the lower right quadrant of the screen" sounds like a
mozilla.exe problem so reassigning to XP Apps
Assignee: troy → don
Status: REOPENED → NEW
Component: Layout → XPApps
QA Contact: petersen → paulmac
Comment 6•25 years ago
|
||
The 'flash' of the browser into the frames of the frameset is, essentially,
until the document loads into the frame, the contents of the frame were picking
up random buffer contents.
However, I think this was fixed with the docShell code that landed last night
(but the network is too flaky for me right now to be certain. BBL).
Comment 7•25 years ago
|
||
Reassigning as per Don
Assignee: don → clayton
Component: XPApps → Layout
QA Contact: jrgm → petersen
Comment 8•25 years ago
|
||
This worksforme mac/linux/win95 2000051108 builds. The chrome is not
painted into the lower frame in the pause before the content loads into
the frame.
Status: NEW → RESOLVED
Closed: 25 years ago → 25 years ago
Resolution: --- → WORKSFORME
Reporter | ||
Comment 10•25 years ago
|
||
Here again in build 2000052420. To reproduce:
- go to http://web.mail.dk/
- let the page load finished
- place your cursor in Location field of the browser and press Enter.
It only happens after pressing Enter in the Location field. Not by pressing
Reload. Reload seems to clear the page to white. Pressing Enter doesn't seem to
have the same effect.
Comment 11•25 years ago
|
||
Triage duty calls. Reassinging to av.
Assignee: clayton → av
Status: REOPENED → NEW
Comment 12•25 years ago
|
||
I see this on NT. Looks like during reflow frame paints itself with some not
discarded garbage. Nisheeth, does it lookk like reflow problem to you?
Assignee: av → nisheeth
OS: Windows 98 → Windows NT
Comment 13•25 years ago
|
||
Kevin, this seems like a rendering issue. When we load urls by clicking on a
link, things work fine. When we load a url by hitting enter in the url bar, a
piece of the mozilla UI appear briefly on the page before the new page loads.
It seems like the root view is not getting cleared for the latter case.
Assignee: nisheeth → kmcclusk
Assignee | ||
Comment 14•25 years ago
|
||
The problem is that the entire content area is invalidated before a document is
loaded. The paint message comes through and the frames are asked to paint, but
since there isn't a document there isn't a frame to paint the background of the
document. The view manager assumes everything has been painted and copies the
back buffer forward. Since the background hasn't been rendered the previous
content of the back buffer is copied forward. The solution is prevent the
docshell or and layout from invalidating until there is a frame which can render
into the area.
Status: NEW → ASSIGNED
Target Milestone: --- → M18
Assignee | ||
Comment 15•25 years ago
|
||
Nominating for nsbeta3. This bug shows up on a large number of pages.
Keywords: nsbeta3
Assignee | ||
Updated•25 years ago
|
Whiteboard: nsbeta3-
Assignee | ||
Comment 18•25 years ago
|
||
The double rendering can be fixed by having the HTMLFrameInnerFrame paint the
damaged area in all cases instead of painting only when a sub-shell has not been
created. In addition, the FillRect call should be changed to pass the damaged
rect instead of the entire bounds for the HTMLFrameInnerFrame.
in nsFrameFrame.cpp change the Paint method from:
NS_IMETHODIMP
nsHTMLFrameInnerFrame::Paint(nsIPresContext* aPresContext,
nsIRenderingContext& aRenderingContext,
const nsRect& aDirtyRect,
nsFramePaintLayer aWhichLayer)
{
//printf("inner paint %X (%d,%d,%d,%d) \n", this, aDirtyRect.x, aDirtyRect.y,
aDirtyRect.width, aDirtyRect.height);
// if there is not web shell paint based on our background color,
// otherwise let the web shell paint the sub document
if (!mSubShell) {
const nsStyleColor* color =
(const nsStyleColor*)mStyleContext->GetStyleData(eStyleStruct_Color);
aRenderingContext.SetColor(color->mBackgroundColor);
aRenderingContext.FillRect(mRect);
}
return NS_OK;
}
to:
NS_IMETHODIMP
nsHTMLFrameInnerFrame::Paint(nsIPresContext* aPresContext,
nsIRenderingContext& aRenderingContext,
const nsRect& aDirtyRect,
nsFramePaintLayer aWhichLayer)
{
//printf("inner paint %X (%d,%d,%d,%d) \n", this, aDirtyRect.x, aDirtyRect.y,
aDirtyRect.width, aDirtyRect.height);
const nsStyleColor* color =
(const nsStyleColor*)mStyleContext->GetStyleData(eStyleStruct_Color);
aRenderingContext.SetColor(color->mBackgroundColor);
aRenderingContext.FillRect(aDirtyRect,);
return NS_OK;
}
This fixes the problem, but I'm concerned about performance. This paint method
gets called alot when loading pages within Mozilla. 34+ times.
This bug has been marked "future" because the original netscape engineer working
on this is over-burdened. If you feel this is an error, that you or another
known resource will be working on this bug,or if it blocks your work in some way
-- please attach your concern to the bug for reconsideration.
Marked bug future based on nsbeta3- designation.
Target Milestone: M18 → Future
Assignee | ||
Comment 19•24 years ago
|
||
*** Bug 48854 has been marked as a duplicate of this bug. ***
Comment 20•24 years ago
|
||
*** Bug 42622 has been marked as a duplicate of this bug. ***
Assignee | ||
Comment 21•24 years ago
|
||
Assignee | ||
Updated•24 years ago
|
Whiteboard: [nsbeta3-] → [nsbeta3-][HAVEFIX]
Assignee | ||
Comment 22•24 years ago
|
||
*** Bug 46669 has been marked as a duplicate of this bug. ***
Comment 23•24 years ago
|
||
bug 46669 was marked as a dup of this. However, I'm not 100% certain that it is
- 46669 doesn't appear to fill with garbage, it fills with the content of the
current window. Now, this may be just another aspect of the same bug, but it
seems like it might be something else (like cloning an object when a new frame
is created).
I would say I'm 90% certain however. I think 46669 should be retested with the
patch installed or when the problem is fixed before this bug is marked as
closed.
Comment 24•24 years ago
|
||
Bug 48480 may be a dup of this one
Assignee | ||
Comment 25•24 years ago
|
||
Marking nsbeta3+. This bug shows up a numerous pages when using a slow
connection. The fix is small localized and low risk.
Whiteboard: [nsbeta3-][HAVEFIX] → [nsbeta3+][HAVEFIX]
Assignee | ||
Comment 26•24 years ago
|
||
Fixed in 8/21/2000 9:23PM build.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago → 24 years ago
Resolution: --- → FIXED
Target Milestone: Future → M20
Comment 27•24 years ago
|
||
Not seeing this problem in the latest build (August 23rd) on Mac or Windows.
Reporter, check with the latest version to also verify.
Comment 29•24 years ago
|
||
20010208xx pull/build
I still see this bug at web.mail.dk, as well as most any framed site (though the
affect can be hard to see on a fast machine/link/display).
See comments in n.p.m.performance
It's also easy to recreate by going to http://www.nerve.com/photography/, going
to mozilla.org, then hitting back. watch the bottom frame in particular.
OS->All since I see this on FreeBSD. It's possible this is an X/etc specific
instance.
Adding perf since this extra rendering slows us down, especially on a remote X
display.
Very visually unappealing if you have a site with a bunch of frames. VERY.
nominating for mozilla 0.9
See also the comments in bug 46669.
Status: VERIFIED → REOPENED
OS: Windows NT → All
Resolution: FIXED → ---
Whiteboard: [nsbeta3+][HAVEFIX]
Reporter | ||
Comment 30•24 years ago
|
||
If you turn the Sidebar on, I also sometimes see parts of the sidebar in the
places where the frames are loaded!
Build 20010209 on Win2k
Assignee | ||
Comment 31•24 years ago
|
||
This has been fixed.
marking fixed.
Status: REOPENED → RESOLVED
Closed: 24 years ago → 24 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•