Clear the backbuffer to white before rendering to it and copying forward b=34283 r=attinasi@netscape.com